--- a/src/scss/_custom.scss
+++ b/src/scss/_custom.scss
@@ -1,6 +1,119 @@
+@import "mixin";
 // Here you can add other styles
 input[type=number].no-spinner::-webkit-inner-spin-button, 
     input[type=number]::-webkit-outer-spin-button { 
     -webkit-appearance: none; 
      margin: 0; 
+}
+// Header 
+.c-header {
+    background: #ffffff;
+    border: none !important;
+    .c-subheader {
+        background: #f8fafc;
+        border: none !important;
+    }
+}
+.c-main {
+    padding-top: 0 !important;
+    .fade {
+        background: white;
+        transition: opacity 0.15s linear;
+        .widgets.row {
+            padding: 20px;
+        }
+        .traffic.card {
+            margin: 0 20px;
+        }
+    }
+}
+
+// Dashboard
+.chart {
+    h4#traffic {
+        color: $light-primary;
+    }
+    .date-traffic {
+        font-size: 25px;
+    }
+}
+
+// Chart
+.chart-title {
+    color: $light-primary;
+    margin: 20px;
+}
+
+// widgets
+.widgets {
+    .text-value-lg {
+        font-size: 2.5rem !important;
+    }
+    .image-card {
+        width: 160px;
+        height: 165px;
+    }
+}
+
+/// button active and banned
+.button-active {
+    @include style-glowing-button();
+}
+    @include glowing-button(#1b9e3e);
+
+.button-ban {
+    @include style-glowing-button();
+  }
+    @include glowing-button(#d8d841);
+  
+// Login
+.login {
+    background-image: url('/dashboard/background.png');
+    background-size: cover;
+    background-position: center;
+    .content-login {
+        background-image: url('/dashboard/logo.png');
+        background-size: cover;
+    }
+}
+  
+// sidebar
+.c-sidebar {
+    color: #000;
+    .c-sidebar-nav-dropdown.c-show {
+        background: $white;
+        .c-sidebar-nav-dropdown-toggle {
+            color: $black;
+        }
+        .c-sidebar-nav-link {
+            color: $black;
+        }
+    }
+    .c-sidebar-nav-dropdown-toggle {
+        color: $black;
+        &:hover {
+            .c-sidebar-nav-icon {
+                color: $black;
+            }
+        }
+        .c-sidebar-nav-icon {
+            color: $black;
+        }
+    }
+    .c-sidebar-brand {
+        background: #ffffffba;
+    }
+    .c-sidebar-nav.ps {
+        background: white;
+        border-right: 0.5px solid #d8dbe0;
+        overflow: -moz-scrollbars-none;
+        -ms-overflow-style: none;
+    }
+    .c-sidebar-nav-item {
+        width: inherit;
+        background: $primary;
+    }
+    .c-sidebar-minimizer {
+        background-color: $white;
+    }
 }
