--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -1,1 +1,37 @@
-// Variable overrides
+// Body
+$body-bg: #f8fafc;
+
+// Typography
+$font-family-sans-serif: 'Nunito', sans-serif;
+$font-size-base: 0.9rem;
+$line-height-base: 1.6;
+$icon-primary: #189F92;
+$light-primary: #0ea2948c;
+$primary: #189F92;
+$background-banner: rgba(22, 26, 39, 0.7);
+$btn-register: #308f82;
+$background-special: #e5e5e5;
+$box-shadow :0 5px 8px 0 rgba(0, 0, 0, 0.2), 0 9px 26px 0 rgba(0, 0, 0, 0.19);
+$main-title: rgb(33, 33, 33);
+
+// Colors
+$white: #ffffff;
+$black: #000000;
+$blue: #3490dc;
+$indigo: #6574cd;
+$purple: #9561e2;
+$pink: #f66d9b;
+$red: #e3342f;
+$orange: #f6993f;
+$yellow: #ffed4a;
+$green: #38c172;
+$teal: #4dc0b5;
+$cyan: #6cb2eb;
+$grey: #333333;
+$light-grey: #a6a8ab;
+$btn-submit: #0062cc;
+$brand-primary: #29b5a8;
+$brand-secondary: #ff8300;
+$gray: #6b7381;
+$gray-light: lighten($gray, 15%);
+$gray-lighter: lighten($gray, 30%);
